--- a/restaurant-menu-app/.gitignore
+++ b/restaurant-menu-app/.gitignore
@@ -4,12 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+.env
 
 # testing
 /coverage
 
 # production
 /build
+
 
 # misc
 .DS_Store
@@ -18,6 +20,15 @@
 .env.test.local
 .env.production.local
 
+.env
+**/.env
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Dependency directories
+node_modules/
+
+
